--- a/doc/vchanger-example.conf
+++ b/doc/vchanger-example.conf
@@ -1,4 +1,4 @@
-# Example vchanger 1.0.0 config file
+# Example vchanger 1.0.2 config file
 
 #
 # Storage Resource     Name of the Storage resource defined in bacula-dir.conf
@@ -10,16 +10,16 @@
 # User                 User to run as when invoked by root. This must be the
 #                      owner of the volume files controlled by this changer, and
 #                      so will need to be the same user that bacula-sd runs as.
-#                      [Default: none ]
-User = bacula
+#                      [Default: bacula ]
+#User = bacula
 
 #
 # Group                Group to run as when invoked by root. This should be the
 #                      owner group of the volume files controlled by this changer,
 #                      and should also be the default group pf the user that
 #                      bacula-sd runs as.
-#                      [Default: none ]
-group = tape
+#                      [Default: tape ]
+#group = tape
 
 #
 # Work Dir             Directory where virtual drive and magazine state information
@@ -29,8 +29,8 @@ group = tape
 
 #
 # Logfile              Path to log file for this changer.
-#                      [Default: /var/log/vchanger/[StorageResource].log ]
-#logfile = "/var/log/vchanger/vchanger.log"
+#                      [Default: [WorkDir]/[StorageResource].log ]
+#logfile = "/var/spool/vchanger/vchanger.log"
 
 #
 # Log Level            Sets the level of detail being logged. An integer value from
