--- a/doc/vchanger-example.conf
+++ b/doc/vchanger-example.conf
@@ -16,7 +16,7 @@
 #
 # Group                Group to run as when invoked by root. This should be the
 #                      owner group of the volume files controlled by this changer,
-#                      and should also be the default group pf the user that
+#                      and should also be the default group of the user that
 #                      bacula-sd runs as.
 #                      [Default: tape ]
 #group = tape
@@ -24,12 +24,12 @@
 #
 # Work Dir             Directory where virtual drive and magazine state information
 #                      and symlinks for this changer are stored.
-#                      [Default: /var/spool/vchanger/[StorageResource] ]
+#                      [Default: /var/spool/vchanger/{StorageResource} ]
 #work dir = "/var/spool/vchanger/vcahnger"
 
 #
 # Logfile              Path to log file for this changer.
-#                      [Default: [WorkDir]/[StorageResource].log ]
+#                      [Default: {WorkDir}/{StorageResource}.log ]
 #logfile = "/var/spool/vchanger/vchanger.log"
 
 #
@@ -50,7 +50,8 @@
 #
 # bconsole config      Path to the config file bconsole will use when vchanger
 #                      invokes bconsole. By default, bconsole will be invoked
-#                      without the -c flag.
+#                      without the -c flag. The file must be readable by the user
+#                      vchanger is run as.
 #                      [Default: none ]
 #bconsole config = /etc/bacula/bconsole.conf
 
@@ -69,7 +70,9 @@
 #                      by prefixing the string "UUID:" to the filesystem's UUID.
 #                      For magazines specified by UUID, the mountpoint of the
 #                      filesystem will be queried from the system. Note that vchanger
-#                      does not attempt to mount the filesystem.
+#                      does not attempt to mount the magazines that are specified
+#                      by filesystem UUID. Vchanger utilizes all magazines that are
+#                      already mounted at the time it is invoked.
 #                      [Default: none ]
 #magazine = "uuid:4fcb1422-f15c-4d7a-8a32-a4dcc0af5e00"
 #Magazine = "/mnt/backup2"
