--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,7 +4,7 @@ AM_CXXFLAGS = -DLOCALSTATEDIR='"${localstatedir}"'
 AM_LDFLAGS = @WINLDADD@
 bin_PROGRAMS = vchanger
 vchanger_SOURCES = compat/getline.c compat/gettimeofday.c \
-					compat/readlink.c \
+					compat/readlink.c compat/semaphore.c \
 					compat/symlink.c compat/sleep.c compat/syslog.c \
 					win32_util.c uuidlookup.c bconsole.cpp \
 					tstring.cpp inifile.cpp mymutex.cpp mypopen.cpp \
